sfa-dms/force-app/main/default/objects/Journey_Plan__c/Journey_Plan__c.object-meta.xml
<CustomObject>
    <label>Journey Plan</label>
    <nameField>
        <label>Journey Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Journey Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>