sfa-dms/force-app/main/default/objects/Journey_Plan__c/fields/Actual_Duration__c.field-meta.xml
<CustomField>
    <fullName>Actual_Duration__c</fullName>
    <label>Actual Duration</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>