sfa-dms/force-app/main/default/objects/Journey_Plan__c/fields/Completed_Visits__c.field-meta.xml
<CustomField>
    <fullName>Completed_Visits__c</fullName>
    <label>Completed Visits</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>