sfa-dms/force-app/main/default/objects/Journey_Plan__c/fields/Estimated_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Start_Time__c</fullName>
    <label>Estimated Start Time</label>
    <type>Time</type>
</CustomField>