sfa-dms/force-app/main/default/objects/Journey_Plan__c/fields/Pending_Visits__c.field-meta.xml
<CustomField>
    <fullName>Pending_Visits__c</fullName>
    <label>Pending Visits</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>