sfa-dms/force-app/main/default/objects/Journey_Plan__c/fields/Success_Rate__c.field-meta.xml
<CustomField>
    <fullName>Success_Rate__c</fullName>
    <formula>IF(
    Planned_Visits__c = 0,
    0,
    Completed_Visits__c / Planned_Visits__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Success Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>