sfa-dms/force-app/main/default/objects/Journey_Plan__c/fields/Total_Distance__c.field-meta.xml
<CustomField>
    <fullName>Total_Distance__c</fullName>
    <label>Total Distance</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>