sfa-dms/force-app/main/default/objects/Journey_Plan__c/fields/Total_Travel_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Travel_Time__c</fullName>
    <label>Total Travel Time</label>
    <description>Total actual travel time in minutes across the day's route (sum of per-stop travel times).</description>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>